修改模组名称，新增物品英文翻译

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ loom {
 	splitEnvironmentSourceSets()
 
 	mods {
-		"hqwtest01" {
+		"lazy_dog" {
 			sourceSet sourceSets.main
 			sourceSet sourceSets.client
 		}
